--- a/src/qt/forms/masternodelist.ui
+++ b/src/qt/forms/masternodelist.ui
@@ -151,6 +151,11 @@
              </column>
              <column>
               <property name="text">
+               <string>Type</string>
+              </property>
+             </column>
+             <column>
+              <property name="text">
                <string>Protocol</string>
               </property>
              </column>
@@ -307,6 +312,11 @@
            <column>
             <property name="text">
              <string>Address</string>
+            </property>
+           </column>
+           <column>
+            <property name="text">
+             <string>Type</string>
             </property>
            </column>
            <column>
